# DeltaCodeCube

./: .gitignore  LICENSE  README.md  deltacodecube_architecture.html  deltacodecube_heatmap.html  deltacodecube_matrix.html  deltacodecube_timeline.html  package-lock.json  package.json  pyproject.toml  test-sample.ts  test_code_parser.py  test_contracts.py  test_cube.py  test_cube_export.html  test_phase3.py
.github/workflows/: dcc-security-gate.yml
docs/: DELTA_CODE_CUBE.md
src/: config.ts  index.ts
src/bigcontext_mcp/: __init__.py  __main__.py  config.py  server.py  types.py
src/bigcontext_mcp/cube/: __init__.py  code_point.py  contracts.py  cube.py  delta.py  suggestions.py  tension.py
src/bigcontext_mcp/cube/features/: __init__.py  lexical.py  semantic.py
src/bigcontext_mcp/db/: __init__.py  database.py  queries.py  schema.py
src/bigcontext_mcp/parsers/: __init__.py  base.py  code.py  epub.py  html.py  md.py  pdf.py  txt.py
src/bigcontext_mcp/search/: __init__.py  stopwords.py  tfidf.py  tokenizer.py
src/bigcontext_mcp/segmentation/: __init__.py  chunker.py  patterns.py  segmenter.py
src/bigcontext_mcp/tools/: __init__.py  compare.py  ingest.py  metadata.py  search.py
src/bigcontext_mcp/tools/validators/: __init__.py  cognitive.py  constants.py  epistemology.py  existential.py  genre.py  literal.py  narrative.py  patterns.py  proximity.py  quantifiers.py  schema.py  semantic.py  speaker.py  vocabulary.py
src/bigcontext_mcp/utils/: __init__.py  logger.py
src/db/: database.ts  schema.ts
src/db/queries/: documents.ts  search.ts  segments.ts
src/deltacodecube/: __main__.py  config.py  server.py
src/deltacodecube/cli/: __init__.py  gatekeeper.py
src/deltacodecube/cube/: __init__.py  advisor.py  clones.py  clustering.py  code_point.py  contracts.py  cube.py  debt.py  delta.py  drift.py  graph.py  smells.py  suggestions.py  surface.py  tension.py  waves.py
src/deltacodecube/cube/features/: __init__.py  pattern_features.py  structural.py  temporal.py
src/deltacodecube/cube/security/: __init__.py  blast_radius.py  cost.py  dedup.py  observability.py  remediation.py  risk.py  sarif.py  scanners.py
src/deltacodecube/cube/visualizations/: __init__.py  architecture.py  heatmap.py  matrix.py  security_heatmap.py  timeline.py
src/deltacodecube/db/: __init__.py  database.py  migrations.py
src/deltacodecube/tools/: __init__.py  analysis.py  contracts.py  core.py  deltas.py  search.py  security.py  visualizations.py
src/deltacodecube/utils/: __init__.py  logger.py
src/deltacodecube/visualization/: __init__.py
src/parsers/: epub-parser.ts  html-parser.ts  index.ts  md-parser.ts  pdf-parser.ts  txt-parser.ts
src/search/: stopwords.ts  tfidf.ts  tokenizer.ts
src/segmentation/: chunker.ts  patterns.ts  segmenter.ts
src/tools/: cognitive-constraints.ts  compare.ts  epistemological-guard.ts  extraction-validators.ts  index.ts  ingest.ts  metadata.ts  search.ts  semantic-frames.ts  source-validation.ts
src/types/: index.ts  pdf-parse.d.ts  schemas.ts
src/utils/: errors.ts  logger.ts
tests/: test_graph_features.py  test_pattern_features.py
