[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deltacodecube"
version = "1.0.0"
description = "MCP Server for multi-dimensional code indexing - represent code as points in 63D feature space for similarity search, impact analysis, and change detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Juan Pablo Diaz" }
]
keywords = ["mcp", "code-analysis", "similarity-search", "impact-analysis", "refactoring", "claude", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
deltacodecube = "deltacodecube.__main__:main"

[project.urls]
Homepage = "https://github.com/Rixmerz/DeltaCodeCube"
Repository = "https://github.com/Rixmerz/DeltaCodeCube"
Issues = "https://github.com/Rixmerz/DeltaCodeCube/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/deltacodecube"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
